@@ -9,6 +9,8 @@
 
 20020905	Updated the license text in each file header to be more specific. It now reads
 
+	Copyright (c) 2002, Terran Development Corporation
+	All rights reserved.
 	This code is made available to the public under a BSD-like license, a copy of which
 	should have been provided with this code in the file LICENSE. For a copy of the BSD 
 	license template please visit http://www.opensource.org/licenses/bsd-license.php
